<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="calibrate">Calibrate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="result">Result</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
    <string name="analyze">Analyse</string>
    <!-- Tests -->
    <string name="aluminum">.</string>
    <string name="arsenic_iii">.</string>
...
    <string name="nitrite">.</string>
    <string name="blood_sugar">.</string>
    <string name="organophosphate">.</string>
    <string name="up_to_with_dilution">Up to %s with dilution</string>

    <!--Calibration Screen-->
    <string name="calibrationIsInvalid">Invalid calibration</string>
    <string name="tryRecalibrating">Try recalibrating</string>
    <string name="reagentExpiry">Reagent expiry</string>
    <string name="expired">Expired</string>
    <string name="couldNotCalibrate">Could not calibrate</string>

    <!--Dilution Selection Dialog-->
    <string name="dilution">Dilution</string>
...
    <!--Result Screen-->
    <string name="acceptResult">Accept Result</string>
    <string name="highLevelsFound">High level of contamination</string>
    <string name="tryWithDilutedSample" tools:ignore="PluralsCandidate">Try again with %1$d times dilution</string>

    <!--Alerts-->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>

    <!--Permission-->
    <string name="cameraPermissions">Camera permissions are required</string>
    <string name="cameraAndLocationPermissions">Camera &amp; location permissions are required</string>

    <string name="bc_dilution_1">Rinse the mixing chamber with deionised water.</string>
...

    <string name="c_crush_sample">Continue crushing of the sample util the greenish colour disappears from the filter - this could take up to 5 minutes.</string>
    <string name="c_add_extraction_10ml">Add more extraction solution until it reaches the <b>10 ml</b> mark.</string>

    <!-- About Screen -->
    <string name="copyrightMessage">Copyright © ffem</string>
    <string name="legalInformation">Legal Information</string>

    <!--Messages-->
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="cannotUseCamera">Can\'t use camera. Make sure flashlight is off and close any apps that may be using the camera</string>
    <string name="cameraNotAvailable">Camera not available</string>
    <string name="cameraRequired">A back facing camera is required for colorimetric analysis</string>
    <string name="tryRestarting">If the problem continues, restart this device</string>
    <string name="cannotCalibrate">Cannot calibrate</string>
    <string name="errorCameraFlashRequired">A camera flash was not found on this device</string>
...
