...
    <string name="load">Load</string>
    <string name="swatches">Swatches</string>
    <string name="name">Name</string>
    <string name="deleted">Deleted</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="warning">Warning</string>
    <string name="run_test">Run Test</string>
    <string name="start">Start</string>
    <string name="general">General</string>
    <string name="app_slogan">Water Quality System</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
...
    <string name="result">Result</string>
    <string name="camera_busy">Camera Busy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="select_test">Select Test</string>
    <string name="save">Save</string>
    <string name="instructions">Instructions</string>
    <string name="analyze">Analyse</string>

    <plurals name="dilutions">
        <item quantity="one">@string/no_dilution</item>
        <item quantity="many">@string/times_dilution</item>
...
